[package]
name = "grrs3"
version = "0.1.0"
authors = ["Ismail ismail.merced3@gmail.com"]
license = "Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/msi404/grrs"
repository = "https://github.com/msi404/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
